--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -1,19 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard</title>
-  <link rel="stylesheet" href="assets/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dashboard</title>
+<style>
+  html, body {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
+  }
+
+  body {
+    background-image: url('assets/train.jpg'); /* Use local image */
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* Add a blur overlay to make content readable */
+  body::before {
+    content: "";
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(0,0,0,0.4);
+    backdrop-filter: blur(3px);
+    z-index: -1;
+  }
+
+  .container {
+    background: rgba(255, 255, 255, 0.95);
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    width: 350px;
+    text-align: center;
+  }
+
+  .btn-custom {
+    width: 100%;
+    padding: 10px;
+    background: linear-gradient(to right, #2575fc, #6a11cb);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 8px 0;
+  }
+
+  .btn-custom:hover {
+    opacity: 0.9;
+  }
+
+  h2 {
+    margin-bottom: 20px;
+    color: #333;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h2>Welcome, <span id="user-name"></span></h2>
-    <button class="btn-custom" onclick="goTo('trains.html')">🚆 View Trains</button><br><br>
-    <button class="btn-custom" onclick="goTo('reservation.html')">🎟 Book Ticket</button><br><br>
-    <button class="btn-custom" onclick="goTo('my-reservations.html')">📋 My Reservations</button><br><br>
-    <button class="btn-custom" onclick="logout()">🚪 Logout</button>
-  </div>
-  <script src="assets/app.js"></script>
+<div class="container">
+  <h2>Welcome, <span id="user-name"></span></h2>
+  
+  <button class="btn-custom" onclick="goTo('trains.html')">🚆 View Trains</button>
+  <button class="btn-custom" onclick="goTo('reservation.html')">🎟 Book Ticket</button>
+  <button class="btn-custom" onclick="goTo('my-reservations.html')">📋 My Reservations</button>
+  <button class="btn-custom" onclick="goTo('cancel.html')">❌ Cancel Reservation</button>
+  <button class="btn-custom" onclick="logout()">🚪 Logout</button>
+</div>
+
+<script src="assets/app.js"></script>
+<script>
+  if(document.getElementById("user-name"))
+    document.getElementById("user-name").innerText = localStorage.getItem("user");
+</script>
 </body>
 </html>
